--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     </div>
                   </div>
                   <div class="col-sm-4">
-                    <a href="secciones/sub-secciones/listas-enlazadas.html" title="" class="black-image-project-hover">
+                    <a href="listas-enlazadas.html" title="" class="black-image-project-hover">
                       <img src="https://miro.medium.com/max/1200/1*Ut55XNszCQPxCG9qaEQfAw.png" alt=""
                         class="img-responsive">
                     </a>
