--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
           <div class="row">
             <a class="black-image-project-hover">
-              <img src="assets/images/logo/vr.png" class="img-responsive">
+              <img src="https://www.iberdrola.com/wcorp/gc/prod/es_ES/estaticos/Realidad-Aumentada/imagen_bottom.png" class="img-responsive">
             </a>
           </div>
         </div>
