--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     <div class="card-container card-container-lg">
                       <h4>001/006</h4>
                       <h3 class="centro">Arrays</h3>
-                      <p style="margin-bottom: 3rem;">Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies.
+                      <p style="margin-bottom: 3rem;">Conoce más sobre los arrays en el siguiente link
                       </p>
                       <a href="arrays.html" title="" class="btn btn-default">Ver más
                         sobre...</a>
@@ -174,7 +174,7 @@
                     <div class="card-container card-container-lg">
                       <h4>002/006</h4>
                       <h3 class="centro">Listas enlazadas</h3>
-                      <p style="margin-bottom: 3rem;">Proin pharetra metus id iaculis dignissim. In aliquet lorem ut ex
+                      <p style="margin-bottom: 3rem;">Conoce más sobre las listas ebnlazadas en el siguiente link
                         ullamcorper.</p>
                       <a href="listas-enlazadas.html" title="" class="btn btn-default">Ver más
                         sobre...</a>
@@ -189,8 +189,7 @@
                     <div class="card-container card-container-lg">
                       <h4>003/006</h4>
                       <h3 class="centro">Pilas</h3>
-                      <p style="margin-bottom: 3rem;">Fusce sed hendrerit augue, a rhoncus velit. In non lorem mattis,
-                        tempor sem sit amet.</p>
+                      <p style="margin-bottom: 3rem;">Conoce más sobre las pilas en el siguiente link</p>
                       <a style="padding: auto;" href="pilas.html" class="btn btn-default">Ver
                         más sobre...</a>
                     </div>
@@ -211,8 +210,7 @@
                     <div class="card-container">
                       <h4>004/006</h4>
                       <h3 class="centro">Colas</h3>
-                      <p style="margin-bottom: 3rem;">Proin pharetra metus id iaculis dignissim. In aliquet lorem ut ex
-                        ullamcorper.</p>
+                      <p style="margin-bottom: 3rem;">Conoce más sobre las colas en el siguiente link</p>
                       <a href="colas.html" class="btn btn-default">Ver más sobre...</a>
                     </div>
                   </div>
@@ -225,7 +223,7 @@
                     <div class="card-container">
                       <h4>005/006</h4>
                       <h3 class="centro">Arboles</h3>
-                      <p style="margin-bottom: 3rem;">Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies.
+                      <p style="margin-bottom: 3rem;">Conoce más sobre los arboles en el siguiente link
                       </p>
                       <a href="arboles.html" class="btn btn-default">Ver más sobre...</a>
                     </div>
@@ -240,8 +238,7 @@
                     <div class="card-container">
                       <h4>006/006</h4>
                       <h3 class="centro">Grafos</h3>
-                      <p style="margin-bottom: 3rem;">Fusce sed hendrerit augue, a rhoncus velit. In non lorem mattis,
-                        tempor sem sit amet.</p>
+                      <p style="margin-bottom: 3rem;">Conoce más sobre los grafos en el siguiente link</p>
                       <a href="grafos.html" class="btn btn-default">Ver más sobre...</a>
                     </div>
                   </div>
